--- a/packages/appstore/package.json
+++ b/packages/appstore/package.json
@@ -26,9 +26,11 @@
     "dependencies": {
         "@deriv/account": "^1.0.0",
         "@deriv/api-types": "^1.0.54",
+        "@deriv/cashier": "^1.0.0",
         "@deriv/components": "^1.0.0",
         "@deriv/cfd": "^1.0.0",
         "@deriv/shared": "^1.0.0",
+        "@deriv/stores": "^1.0.0",
         "@deriv/trader": "^3.8.0",
         "@deriv/translations": "^1.0.0",
         "@deriv/ui": "^0.0.15",
